syntax = "proto3";

package api.zeus.v1;
import "google/api/annotations.proto";
option go_package = "github.com/jmolboy/ms-zeus/api/zeus/v1;v1";
option java_multiple_files = true;
option java_package = "api.zeus.v1";

service OpUser {
	rpc Current (CurrentRequest) returns (CurrentReply){
		option (google.api.http) = {
			get: "/api/opuser/v1/current"
		};
	}

	rpc Logout (LogOutRequest) returns (LogOutReply){
		option (google.api.http) = {
			post: "/api/opuser/v1/logout"
			body: "*"
		};
	}
}

message CurrentRequest{}

message CurrentUser{
	int64 id = 1;
	int64 uid =2;
	string userId= 3;
	string userName= 4;
	int64 roleId = 5;
}

message CurrentReply{
	int64 success = 1;
	string msg=2;
	CurrentUser data=3;
}

message LogOutRequest{}

message LogOutReply{
	int64 success = 1;
	string msg=2;
	string data=3;
}